# gpt-fn

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  test_ai_fn
.github/: dependabot.yml
.github/workflows/: python-package.yml
scripts/: build.sh
src/fn/: conftest.py  prompt.py
src/fn/tests/: test_ai_function.py
src/fn/tests/__snapshots__/: test_ai_function.ambr
src/fn/tests/cassettes/: test_ai_fabnocci.yaml  test_ai_fake_hero.yaml  test_ai_fn.yaml
src/fn/utils/: signature.py
src/fn/utils/tests/: test_pydantic_parser.py  test_signature.py
src/fn/utils/tests/__snapshots__/: test_signature.ambr
src/gpt_fn/: ai_function.py  completion.py  exceptions.py
src/gpt_fn/tests/: test_completion.py  test_prompt.py
src/gpt_fn/tests/__snapshots__/: test_ai_function.ambr  test_completion.ambr  test_prompt.ambr
src/gpt_fn/tests/cassettes/: test_ai_fabnocci.yaml  test_ai_fake_hero.yaml  test_chat_completion.yaml  test_chat_completion_incomplete.yaml  test_function_completion.yaml  test_function_completion_without_neccess_function.yaml
src/gpt_fn/tests/cassettes/test_completion/: test_achat_completion.yaml  test_afunction_completion.yaml  test_chat_completion.yaml  test_function_completion.yaml  test_function_completion_without_enough_tokens.yaml  test_function_completion_without_neccess_function.yaml
src/gpt_fn/utils/: json_decode.py  pydantic_parser.py  signature.py
src/gpt_fn/utils/tests/: test_json_decode.py  test_pydantic_parser.py  test_signature.py
tests/cassettes/: test_ai_fabnocci.yaml  test_ai_fake_hero.yaml
(+7 files in other folders)
