[tool.poetry]
name = "gpt-fn"
version = "0.1.0"
description = ""
authors = ["lucemia <lucemia@gmail.com>"]
readme = "README.md"
packages = [{include = "gpt_fn"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
