[tool.poetry]
name = "gpt-fn"
version = "0.1.0"
description = ""
authors = ["lucemia <lucemia@gmail.com>"]
readme = "README.md"
packages = [{ include = "gpt_fn" }]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.7"
pydantic = "^1.10.8"

[tool.poetry.group.test.dependencies]
syrupy = "^4.0.2"
pytest-vcr = "^1.0.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
